--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "description": "",
   "scripts": {
-    "start": "NODE_ENV=production node src/index.js",
-    "dev": "NODE_ENV=development nodemon src/index.js"
+    "start": "node dist/index.js",
+    "dev": "NODE_ENV=development PORT=1234 nodemon dist/index.js",
+    "build": "babel src -d dist --copy-files",
+    "build:watch": "babel src -d dist --watch"
   },
   "repository": {
     "type": "git",
@@ -29,6 +31,9 @@
     "wildcard-subdomains": "^1.1.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.10.1",
+    "@babel/core": "^7.10.1",
+    "@babel/preset-env": "^7.10.1",
     "nodemon": "^2.0.4"
   }
 }
