--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "body-parser": "^1.19.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "markdown-it": "^11.0.0",
     "mongoose": "^5.9.16",
     "shortid": "^2.2.15",
     "wildcard-subdomains": "^1.1.0"
