list as private package

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "dinoblog",
-  "version": "0.1.0",
-  "description": "",
+  "private": true,
   "scripts": {
     "start": "node dist/index.js",
     "dev": "NODE_ENV=development PORT=1234 nodemon dist/index.js",
